# academia_esp32_desafio01

./: README.md
dht_publisher/: CMakeLists.txt
dht_publisher/components/mqtt_app/: mqtt_app.c
dht_publisher/components/mqtt_app/include/: mqtt_app.h
dht_publisher/components/wifi/: CMakeLists.txt
dht_publisher/main/: CMakeLists.txt  main.c
subscriber/: CMakeLists.txt
subscriber/components/mqtt_app/: CMakeLists.txt  Kconfig.projbuild  mqtt_app.c
subscriber/components/mqtt_app/include/: mqtt_app.h
subscriber/components/wifi/: wifi.c
subscriber/components/wifi/include/: wifi.h
subscriber/main/: CMakeLists.txt  main.c
